# partitions

./: CMakeLists.txt  autogen.sh
cmake/gitache-configs/: libcwd_r.cmake
src/: CMakeLists.txt  Element.cxx  Element.h  ElementPair.cxx  ElementPair.h  Group.cxx  Group.h  GroupIteratorScatter.cxx  GroupIteratorScatter.h  PairTripletIteratorExplode.cxx  PairTripletIteratorExplode.h  PairTripletIteratorScatter.cxx  PairTripletIteratorScatter.h  Partition.cxx  Partition.h  PartitionIterator.cxx  PartitionIterator.h  PartitionIteratorBase.cxx  PartitionIteratorBase.h  PartitionIteratorBruteForce.cxx  PartitionIteratorBruteForce.h  PartitionIteratorExplode.cxx  PartitionIteratorExplode.h  PartitionIteratorScatter.cxx  PartitionIteratorScatter.h  PartitionIteratorSingleElement.cxx  PartitionIteratorSingleElement.h  PartitionIteratorWholeGroup.cxx  PartitionIteratorWholeGroup.h  PartitionIteratorWholeSet.cxx  PartitionIteratorWholeSet.h  PartitionTask.cxx  PartitionTask.h  Score.cxx  Score.h  Set.cxx  Set.h  SetIteratorScatter.cxx  SetIteratorScatter.h  Table.cxx  (+6 more)
